* Fixed bug 1140, shipto causes exchangerate format lost (Chris T)
* Fixed errors running custom queries where no table yet defined (Chris T)
* Use Shipto button works right away when adding from invoice (Chris T)
* Fixed bug 1196, number formatting issue when decimal separator is comma, like 1.000,00 (Pongracz I)
* Fixed bug 1169, sorting orders results in empty list (Chris T)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan


Changelog for 1.3.42
* Fixed #1184 invalid numeric format on payment search field, where date was used instead of amount (Pongracz I)
* Fix for missing emails when emailing orders/quotations (1073, Chris T)
* Fix doubled email addresses when emailing invoice (1186, Pongracz I)
* Fix for inactive customers showing up on receipt search (1095, Chris T)
* Hungarian translation changes (Pongracz I)
* View file_links is no longer dropped before rebuild (Chris T, 1099)
* Fix for invoice with shipto linking to wrong one on report (Chris T, 1104)
* Fix for shipto's not being automatically checked (Chris T, 1100)
* Fixed forex rounding issue with single payments not posting (Chris T)
* Fixed typo in search payment form: aligh -> align (Pongracz I)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.3.41
* Fix for invalid ref when entering payment  (John Locke)

Changelog for 1.3.40
* Updated nginx configuration (Pongracz I)
* GL account search now will search within descriptions for matches (Chris T)
* Printing without an invoice number now errors instead of increments (Chris T)
* Fixed internal server error using cash/payment (Chris T)
* Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
* Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
* Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
* Fixed type mismatch between invoice.qty and invoice.allocated (Chris T)
* Fixed manual tax invoices not reversing properly (Chris T, 1134)